--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,16 +10,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: golang:latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Build Frontend
-        run: |
-          cd frontend
-          go build frontend
+    - uses: actions/setup-go@v5
+      with:
+        go-version: '1.22'
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Build Frontend
+      run: go build ./frontend
 
   test:
     runs-on: ubuntu-latest
@@ -29,6 +29,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Test Frontend
-        run: |
-          cd frontend
-          go test 
+        run: go test ./frontend
