--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,10 @@ jobs:
       run: |
         cd frontend
         go build .
+    -  name: Build Backend
+       run: |
+         cd ../backend
+         go build .
 
   test:
     runs-on: ubuntu-latest
