Update main.yml potential fix #3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
         go build .
     -  name: Build Backend
        run: |
-         cd ../backend
+         echo ls
+         cd ../backend/
          go build .
 
   test:
