Update main.yml antoher potential fix #3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
         go build .
     -  name: Build Backend
        run: |
-         echo ls
-         cd ../backend/
+         cd ..
+         cd backend
          go build .
 
   test:
