--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,13 +63,16 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
+        username: jakobstrate
         password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Set lowercase repository name
+      run: echo "REPO_LC=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
 
     
     - name: Build frontend image
       run: |
-        FRONTEND_IMAGE=ghcr.io/${{ github.repository }}/frontend:latest
+        FRONTEND_IMAGE=ghcr.io/${{REPO_LC}}/frontend:latest
         docker build -t $FRONTEND_IMAGE ./frontend
         docker push $FRONTEND_IMAGE
         echo "FRONTEND_IMAGE=$FRONTEND_IMAGE" >> $GITHUB_ENV
@@ -77,7 +80,7 @@ jobs:
     
     - name: Build backend image
       run: |
-        BACKEND_IMAGE=ghcr.io/${{ github.repository }}/backend:latest
+        BACKEND_IMAGE=ghcr.io/${{REPO}}/backend:latest
         docker build -t $BACKEND_IMAGE ./backend
         docker push $BACKEND_IMAGE
         echo "BACKEND_IMAGE=$BACKEND_IMAGE" >> $GITHUB_ENV
