--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: jakobstrate
+        username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set lowercase repository name
@@ -80,7 +80,7 @@ jobs:
     
     - name: Build backend image
       run: |
-        BACKEND_IMAGE=ghcr.io/${{REPO}}/backend:latest
+        BACKEND_IMAGE=ghcr.io/${{REPO_LC}}/backend:latest
         docker build -t $BACKEND_IMAGE ./backend
         docker push $BACKEND_IMAGE
         echo "BACKEND_IMAGE=$BACKEND_IMAGE" >> $GITHUB_ENV
@@ -93,7 +93,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: jakobstrate
+        username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Pull and run images
