--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,13 +66,10 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Set lowercase repository name
-      run: echo "REPO_LC=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
-
     
     - name: Build frontend image
       run: |
-        FRONTEND_IMAGE=ghcr.io/${{REPO_LC}}/frontend:latest
+        FRONTEND_IMAGE=ghcr.io/${{ toLower(github.repository) }}/frontend:latest
         docker build -t $FRONTEND_IMAGE ./frontend
         docker push $FRONTEND_IMAGE
         echo "FRONTEND_IMAGE=$FRONTEND_IMAGE" >> $GITHUB_ENV
@@ -80,7 +77,7 @@ jobs:
     
     - name: Build backend image
       run: |
-        BACKEND_IMAGE=ghcr.io/${{REPO_LC}}/backend:latest
+        BACKEND_IMAGE=ghcr.io/${{ toLower(github.repository) }}/backend:latest
         docker build -t $BACKEND_IMAGE ./backend
         docker push $BACKEND_IMAGE
         echo "BACKEND_IMAGE=$BACKEND_IMAGE" >> $GITHUB_ENV
