--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,11 +65,11 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-
+        
     
     - name: Build frontend image
       run: |
-        FRONTEND_IMAGE=ghcr.io/${{ toLower(github.repository) }}/frontend:latest
+        FRONTEND_IMAGE=ghcr.io/Bruunnnn/simple-fortune-cookie/frontend:latest
         docker build -t $FRONTEND_IMAGE ./frontend
         docker push $FRONTEND_IMAGE
         echo "FRONTEND_IMAGE=$FRONTEND_IMAGE" >> $GITHUB_ENV
@@ -77,7 +77,7 @@ jobs:
     
     - name: Build backend image
       run: |
-        BACKEND_IMAGE=ghcr.io/${{ toLower(github.repository) }}/backend:latest
+        BACKEND_IMAGE=ghcr.io/Bruunnnn/simple-fortune-cookie/backend:latest
         docker build -t $BACKEND_IMAGE ./backend
         docker push $BACKEND_IMAGE
         echo "BACKEND_IMAGE=$BACKEND_IMAGE" >> $GITHUB_ENV
