kubernetes deployment created, and acces granted through the environment

--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: ghcr.io/Bruunnnn/simple-fortune-cookie.git/backend:latest
+        image: ghcr.io/bruunnnn/simple-fortune-cookie/backend:latest
         resources:
           limits:
             memory: "128Mi"
