--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -14,10 +14,15 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ghcr.io/Bruunnnn/simple-fortune-cookie.git/frontend:latest
+        image: ghcr.io/bruunnnn/simple-fortune-cookie/frontend:latest
         resources:
           limits:
             memory: "128Mi"
             cpu: "500m"
         ports:
-        - containerPort: 9000
+        - containerPort: 8080
+        env: 
+          - name: BACKEND_DNS
+            value: backend
+          - name: BACKEND_PORT
+            value: "9000"
