--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,6 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -85,7 +84,7 @@ jobs:
         docker run -d -p 8080:8080 $FRONTEND_IMAGE
         docker run -d -p 9000:9000 $BACKEND_IMAGE
         
-  jobs:
+  kUBECONFIG:
     runs-on: ubuntu-latest
     needs: docker-image
     steps:
