--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -20,4 +20,7 @@ spec:
             memory: "128Mi"
             cpu: "500m"
         ports:
-        - containerPort: 8080
+        - containerPort: 9000
+        env:
+          - name: REDIS_DNS
+            value: "redis"
