--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,8 @@ jobs:
     steps:
     - name: Set up kubeconfig
       run: echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
+    - name: use Kubeconfig
+      run: kubectl --kubeconfig kubeconfig <your kubectl commands>
 
     
 
