--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,8 +90,13 @@ jobs:
     steps:
     - name: Set up kubeconfig
       run: echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
-    - name: use kubernetes
-      run: kubectl --kubeconfig kubeconfig apply -f ./
+    - name: Deploy manifest
+      run: |
+        kubectl --kubeconfig kubeconfig apply -f frontend-deployment.yaml
+        kubectl --kubeconfig kubeconfig apply -f backend-deployment.yaml
+        kubectl --kubeconfig kubeconfig apply -f frontend-service.yaml
+        kubectl --kubeconfig kubeconfig apply -f backend-service.yaml
+      
 
     
 
