--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,14 +88,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: docker-image
     steps:
-    - name: Set up kubeconfig
-      run: echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
-    - name: Deploy manifest
-      run: |
-        kubectl --kubeconfig kubeconfig apply -f ./frontend-deployment.yaml
-        kubectl --kubeconfig kubeconfig apply -f ./backend-deployment.yaml
-        kubectl --kubeconfig kubeconfig apply -f ./frontend-service.yaml
-        kubectl --kubeconfig kubeconfig apply -f ./backend-service.yaml
+      - uses: actions/checkout@v4
+      - name: Set up kubeconfig
+        run: echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
+      - name: Apply Kubernetes manifests
+        run: |
+          cd $GITHUB_WORKSPACE
+          kubectl --kubeconfig kubeconfig apply -f frontend-deployment.yaml
+          kubectl --kubeconfig kubeconfig apply -f backend-deployment.yaml
+          kubectl --kubeconfig kubeconfig apply -f frontend-service.yaml
+          kubectl --kubeconfig kubeconfig apply -f backend-service.yaml
       
 
     
