--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Test application (run test)
         run: |
-          docker compose -f "docker-compose.yml" up -d
+          docker compose -f "docker-compose.yaml" up -d
           ./test.sh
 
   docker-image:
