Added bash in front of test.sh in the run-command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Test application (run test)
         run: |
           docker compose -f "docker-compose.yaml" up -d
-          ./test.sh
+          bash ./test.sh
 
   docker-image:
     runs-on: ubuntu-latest
