Tried adding a delay from the docker-compose to the test being run

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Test application (run test)
         run: |
           docker compose -f "docker-compose.yaml" up -d
+          sleep 10
           bash ./test.sh
 
 
